--- a/.github/workflows/release_wf.yml
+++ b/.github/workflows/release_wf.yml
@@ -6,7 +6,7 @@ on:
 jobs:
   create_release:
     name: Creating a Release
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout the code
         uses: actions/checkout@v2
