--- a/.github/workflows/release_wf.yml
+++ b/.github/workflows/release_wf.yml
@@ -4,10 +4,16 @@ on:
       - main
 
 jobs:
+
   create_release:
     name: Creating a Release
     runs-on: ubuntu-latest
     steps:
+      - name: Setup Node.js environment
+        uses: actions/setup-node@v4.0.1
+        with:
+          node-version: 20.x
+
       - name: Checkout the code
         uses: actions/checkout@v2
         with:
